--- a/data/functions.yml
+++ b/data/functions.yml
@@ -1,9 +1,24 @@
-- name: Générateur de courriers
+- name: Intelligente
   picture: https://placehold.it/100x100
-  description: lorem lorem lorem lorem
-- name: Envoi de courriers
+  description: Base de données de tous les opérateurs et de leurs conditions de résiliation mise à jour en continu
+- name: Optimisée
   picture: https://placehold.it/100x100
-  description: lorem lorem lorem lorem
-- name: Gestionnaire de tâches
+  description: Intégration de toutes les informations contractuelles en seulement quelques clics
+- name: Conforme
   picture: https://placehold.it/100x100
-  description: lorem lorem lorem lorem
+  description: Rédaction des contenus et des courriers modèles par des juristes spécialisés dans le droit de la consommation
+- name: Sécurisée
+  picture: https://placehold.it/100x100
+  description: Sécurité des données renforcée (confidentialité des données et respect de la propriété des données CNIL
+- name: Didactique
+  picture: https://placehold.it/100x100
+  description: Accès à une information actualisée et personnalisée sur les démarches à respecter pour bien gérer ses contrats à distance Informations et vocabulaire donnés dans  un format très accessible
+- name: Globale
+  picture: https://placehold.it/100x100
+  description: Centralisation de l’ensemble des démarches et des documents sur une seule plateforme
+- name: Experte
+  picture: https://placehold.it/100x100
+  description: Format et fonctionnalités de l’outil réalisé par des experts de la mobilité internationale et de la gestion d’expatriés
+- name: Souple
+  picture: https://placehold.it/100x100
+  description: Choix à la carte du mode de résiliation (téléphone, courrier simple ou recommandé)
